# canvas_pyr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  canvas_pyr.pyi  pyproject.toml
.github/workflows/: CI.yml  deploy_image.yml
canvas_pyr/: __init__.py  canvas_pyr.pyi
dockerfiles/: Dockerfile  aarch64.Dockerfile
scripts/: build_linux_x86_64.sh  release_skia_binary.py  utils.py
src/: a_either.rs  a_geometry.rs  avif.rs  ctx.rs  gif.rs  global_fonts.rs  gradient.rs  image.rs  lib.rs  lottie.rs  path.rs  pattern.rs  sk.rs  svg.rs
ztest/: .gitignore  download_resource.py  main.py  memory_check.py  test_canvas.py  test_draw.py  test_filter.py  test_gif.py  test_global_fonts.py  test_hsla_regression.py  test_image.py  test_image_data.py  test_index.py  test_issue_1088_data_url_mime.py  test_pathkit.py  test_pdf.py  test_pdf_annotations.py  test_regression.py  test_stress_memory_leaks.py  test_svg.py  test_svg_canvas.py  test_text.py  test_variable_fonts.py  utils.py
